<resources>
    <string name="app_name">Travel Trip Application</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí tài khoản</string>
    <string name="email_or_phone">Nhập Tài khoảng</string>
    <string name="hint_enter_email"><i>Nhập email/tài khoảng</i></string>
    <string name="hint_enter_password"><i>Mật khẩu</i></string>
    <string name="password">Mật khẩu</string>
    <string name="others_way_to_login">Hoặc đăng nhập</string>
    <string name="you_have_not_account"><i><b>Bạn chưa có tài khoảng?</b></i></string>
    <string name="register_2"><b>Đăng ký</b></string>
    <string name="skip"><b>Bỏ qua</b></string>
    <string name="fullname">Họ và tên</string>
    <string name="hint_fullname"><i>Họ và tên</i></string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="hint_confirm_password"><i>Nhập lại mật khẩu</i></string>
    <string name="terms">Bằng việc đăng ký, bạn đã đông ý với <b> TRAVEL TRIP</b> về <br>Điều khoản dịch vụ Chính sách bảo mật</br></string>
    <string name="user_full_name">Tên đầy đủ:</string>
    <string name="user_birthday">Ngày sinh:</string>
    <string name="user_contacts">Thông tin liên hệ:</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="email_contact">Email:</string>
    <string name="address">Đia chỉ:</string>
    <string name="more_infomation">Thông tin thêm:</string>
    <string name="action_home">Home</string>
    <string name="action_search_history">Search History</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_setting">Setting</string>
    <string name="welcome_user">WELCOME</string>
    <string name="price_tour">Giá tour</string>
    <string name="manager_user">Quản lý user</string>
    <string name="manager_cate">Quản lý danh mục</string>
    <string name="manager_tour">Quản lý tour</string>
    <string name="manager_order">Quản lý đơn đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>